# Portcast

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/api/dependencies/: __init__.py
app/db/: __init__.py  database.py
app/models/: __init__.py  paragraph.py  word_index.py
app/schemas/: __init__.py  paragraph.py
app/services/: cache.py  dictionary.py  metaphorpsum.py  paragraph.py  text.py
tests/: conftest.py  test_api_integration.py  test_dictionary.py  test_metaphorpsum.py  test_paragraph_service.py  test_text.py  test_text_extended.py
